--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8"
+        "laravelcollective/html": "^5.8",
+        "maatwebsite/excel": "^3.1",
+        "yajra/laravel-datatables-oracle": "^9.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
